--- a/css/style.css
+++ b/css/style.css
@@ -235,8 +235,8 @@ p {
   gap: 18px;
 }
 
-.portfolio__card p{
-    font-size: 14px;
+.portfolio__card p {
+  font-size: 14px;
 }
 
 /* Automated Portfolio Tracking Features Card Section  */
@@ -260,15 +260,123 @@ p {
   background-color: #fff;
 }
 
-.features__card h3{
+.features__card h3 {
   text-align: center;
   font-weight: 800;
   font-size: 30px;
   line-height: 1.2;
 }
 
-.features__card p{
-    font-size: 14px;
-    text-align: center;
+.features__card p {
+  font-size: 14px;
+  text-align: center;
 }
 
+/* Track Payment Section  */
+
+.track {
+  display: flex;
+  justify-content: space-between;
+}
+
+.track__box {
+  background: url(../assets/images/trackPayment__bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 61px;
+}
+
+.track__card {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
+  padding: 9px 19px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+  margin-bottom: 20px;
+  position: relative;
+  width: 433px;
+}
+
+.track__card1 {
+  margin-left: 10%;
+}
+.track__card2 {
+  margin-left: 30%;
+}
+.track__card3 {
+  margin-left: 20%;
+}
+.track__card4 {
+  margin-left: 5%;
+}
+
+.track__card img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 14px;
+}
+
+.track__cardContent {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.track__amount {
+  font-weight: 800;
+  color: #3734A9;
+  font-weight: 700;
+  background-color: #ebebf7;
+  width: fit-content;
+  padding: 8px 11px;
+  border-radius: 30px;
+}
+
+.track__text {
+  font-size: 14px;
+  color: #555;
+}
+
+.track__content {
+  width: 45%;
+}
+
+.track__content p:first-child{
+  color: #3734A9;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.track__content h2 {
+  margin: 14px 0 20px;
+}
+
+.track__content hr {
+  border: 1px solid #c4c4c4;
+  margin: 24px 0;
+}
+
+.track__checks {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.track__check {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 20px;
+}
+
+.track__check i {
+  color: #fdbc64;
+}
