rating banner section done

--- a/css/style.css
+++ b/css/style.css
@@ -515,3 +515,55 @@ p {
 .testomonial__cardContentImg img {
   width: 100%;
 }
+
+/* Banner Section  */
+
+.bannerSection {
+  background-color: #3734a9;
+  color: #fff;
+}
+
+.banner {
+  display: flex;
+  align-items: center;
+}
+
+.banner__content p {
+  font-size: 19px;
+  /* width: 45%; */
+}
+
+.vertical-line {
+  width: 2px;
+  height: 256px;
+  background-color: #3d3d3d;
+  margin: 0 65px 0 29px;
+}
+
+.banner__user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 30px;
+}
+
+.banner__user p {
+  font-size: 30px;
+}
+
+.banner__ratings {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.banner__rating {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.banner__user i {
+  color: #b1ca16;
+}
